Added resource id to ScrollView in file browser. Set it up to scroll to the top of the list automatically on directory navigation instead of showing the previous directory scroll location.

--- a/reicast/android/res/layout/activity_main.xml
+++ b/reicast/android/res/layout/activity_main.xml
@@ -39,6 +39,7 @@
     </LinearLayout>
 
      <ScrollView
+         android:id="@+id/game_scroller"
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:layout_marginLeft="6dp"
