Kinda hooked up options a little, something weird going on in there... Added a simple auto-detect to map for PS3 controllers with default to Ouya controller.

--- a/reicast/android/res/layout/options_fragment.xml
+++ b/reicast/android/res/layout/options_fragment.xml
@@ -3,6 +3,85 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+        <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="0dip"
+                android:layout_weight="1"
+                android:text="System Path(location of dc_boot.bin/dc_flash.bin)" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            
+
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/main_path"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName" >
+			
+                <requestFocus />
+            </EditText>
+
+            <Button     
+                           
+                android:id="@+id/browse_main_path"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Browse" />
+
+        </LinearLayout>
+
+    </LinearLayout>
     
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+        <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="0dip"
+                android:layout_weight="1"
+                android:text="Default Browser Path" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            
+
+            <EditText
+                android:layout_weight="1"
+                android:id="@+id/browse_path"
+                android:layout_width="0dip"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName" >
+			
+                
+            </EditText>
+
+            <Button     
+                           
+                android:id="@+id/browse_main_path"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Browse" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
