--- a/reicast/android/res/layout/mainuilayout_fragment.xml
+++ b/reicast/android/res/layout/mainuilayout_fragment.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-	<LinearLayout 
+
+    <LinearLayout
         android:id="@+id/header_list"
         android:layout_width="match_parent"
         android:layout_height="48dp"
@@ -23,10 +23,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_weight="1"
             android:text="@string/app_name"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textSize="32dp" 
-            android:layout_weight="1" />
+            android:textSize="32dp" />
 
         <ImageView
             android:id="@+id/config"
@@ -48,14 +48,6 @@
             android:layout_marginTop="2dp"
             android:scaleType="fitCenter"
             android:src="@drawable/question" />
-
     </LinearLayout>
-	<FrameLayout
-	    android:id="@+id/fragment_container"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" />
+
 </LinearLayout>
-
-
-
-
