Added gui switch to enable / disable touch vibration (haptic feedback)

--- a/shell/android/res/layout-v14/controllers_fragment.xml
+++ b/shell/android/res/layout-v14/controllers_fragment.xml
@@ -16,7 +16,7 @@
             android:ems="10"
             android:text="@string/touch_vibration" />
 
-        <CheckBox
+        <Switch
             android:id="@+id/compoundButtonTouchVibrationEnabled"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
