--- a/shell/android/res/layout/controllers_fragment.xml
+++ b/shell/android/res/layout/controllers_fragment.xml
@@ -4,167 +4,178 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:stretchColumns="*" >
+
+        <TableRow android:gravity="center_vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:ems="10"
+                android:gravity="center_vertical|left"
+                android:text="@string/touch_vibration" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:orientation="vertical" >
+
+                <de.ankri.views.Switch
+                    android:id="@+id/switchTouchVibrationEnabled"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+        </TableRow>
+
+     <TableRow android:gravity="center_vertical" >
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:ems="10"
-            android:text="@string/touch_vibration" />
+            android:gravity="center_vertical|left"
+            android:text="@string/controller_1" />
 
-        <CheckBox
-            android:id="@+id/compoundButtonTouchVibrationEnabled"
+        <TextView
+            android:id="@+id/textViewDeviceDescriptorPlayer1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-    </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:layout_weight="1"
+            android:ems="10"
+            android:gravity="center_vertical|left"
+            android:text="@string/controller_none_selected" />
 
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:text="@string/controller_1" />
-
-            <TextView
-                android:layout_weight="1"
-		android:id="@+id/textViewDeviceDescriptorPlayer1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-		android:text="@string/controller_none_selected" />
-
-            <Button
-                android:layout_weight="1"
-		android:id="@+id/buttonSelectControllerPlayer1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-		android:text="@string/select_controller" />
-
-            <Button
-                android:layout_weight="1"
-		android:id="@+id/buttonRemoveControllerPlayer1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-		android:text="@string/remove_controller" />
-
-        </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/buttonSelectControllerPlayer1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="@string/select_controller" />
 
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:text="@string/controller_2" />
-
-            <TextView
-                android:layout_weight="1"
-		android:id="@+id/textViewDeviceDescriptorPlayer2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-		android:text="@string/controller_none_selected" />
-
-            <Button
-                android:layout_weight="1"
-		android:id="@+id/buttonSelectControllerPlayer2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-		android:text="@string/select_controller" />
-
-            <Button
-                android:layout_weight="1"
-		android:id="@+id/buttonRemoveControllerPlayer2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-		android:text="@string/remove_controller" />
-
-        </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/buttonRemoveControllerPlayer1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="@string/remove_controller" />
+   </TableRow>
 
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:text="@string/controller_3" />
+     <TableRow android:gravity="center_vertical" >
 
-            <TextView
-                android:layout_weight="1"
-		android:id="@+id/textViewDeviceDescriptorPlayer3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-		android:text="@string/controller_none_selected" />
-
-            <Button
-                android:layout_weight="1"
-		android:id="@+id/buttonSelectControllerPlayer3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-		android:text="@string/select_controller" />
-
-            <Button
-                android:layout_weight="1"
-		android:id="@+id/buttonRemoveControllerPlayer3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-		android:text="@string/remove_controller" />
-
-        </LinearLayout>
-
-    <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:layout_weight="1"
+            android:ems="10"
+            android:gravity="center_vertical|left"
+            android:text="@string/controller_2" />
 
-            <TextView
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:text="@string/controller_4" />
+        <TextView
+            android:id="@+id/textViewDeviceDescriptorPlayer2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:gravity="center_vertical|left"
+            android:text="@string/controller_none_selected" />
 
-            <TextView
-                android:layout_weight="1"
-		android:id="@+id/textViewDeviceDescriptorPlayer4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-		android:text="@string/controller_none_selected" />
+        <Button
+            android:id="@+id/buttonSelectControllerPlayer2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="@string/select_controller" />
 
-            <Button
-                android:layout_weight="1"
-		android:id="@+id/buttonSelectControllerPlayer4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-		android:text="@string/select_controller" />
+        <Button
+            android:id="@+id/buttonRemoveControllerPlayer2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="@string/remove_controller" />
+   </TableRow>
 
-            <Button
-                android:layout_weight="1"
-		android:id="@+id/buttonRemoveControllerPlayer4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-		android:text="@string/remove_controller" />
+     <TableRow android:gravity="center_vertical" >
 
-        </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:gravity="center_vertical|left"
+            android:text="@string/controller_3" />
+
+        <TextView
+            android:id="@+id/textViewDeviceDescriptorPlayer3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:gravity="center_vertical|left"
+            android:text="@string/controller_none_selected" />
+
+        <Button
+            android:id="@+id/buttonSelectControllerPlayer3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="@string/select_controller" />
+
+        <Button
+            android:id="@+id/buttonRemoveControllerPlayer3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="@string/remove_controller" />
+    </TableRow>
+
+     <TableRow android:gravity="center_vertical" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:gravity="center_vertical|left"
+            android:text="@string/controller_4" />
+
+        <TextView
+            android:id="@+id/textViewDeviceDescriptorPlayer4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:gravity="center_vertical|left"
+            android:text="@string/controller_none_selected" />
+
+        <Button
+            android:id="@+id/buttonSelectControllerPlayer4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="@string/select_controller" />
+
+        <Button
+            android:id="@+id/buttonRemoveControllerPlayer4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="@string/remove_controller" />
+        </TableRow>
+    </TableLayout>
 
 </LinearLayout>
