--- a/shell/android/res/layout/drawer_list_item.xml
+++ b/shell/android/res/layout/drawer_list_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48dp">
+    android:layout_height="48dp"
+    android:background="#D0000000">
  
     <ImageView
         android:id="@+id/icon"
