--- a/shell/android/res/layout/controllers_fragment.xml
+++ b/shell/android/res/layout/controllers_fragment.xml
@@ -11,6 +11,32 @@
 
         <TableRow android:gravity="center_vertical" >
 
+        <TextView
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:text="Onscreen Controls" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:orientation="vertical" >
+
+		<Button
+		    android:layout_weight="1"
+		    android:id="@+id/buttonEditVJoy"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="Edit VJoy" />
+            </LinearLayout>
+        </TableRow>
+
+
+        <TableRow android:gravity="center_vertical" >
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
