Fixed an outstanding bug in GL2JNIView that Left/Right Triggers would not get reset after pointer up action (reset would only occur if all fingers were lifted) Added Reset icon for touch controls reset Moved strings to string resource General cleanup...

--- a/shell/android/res/layout/controllers_fragment.xml
+++ b/shell/android/res/layout/controllers_fragment.xml
@@ -16,7 +16,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:text="Onscreen Controls" />
+            android:text="@string/customize_touch_controls" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -27,10 +27,10 @@
 
 		<Button
 		    android:layout_weight="1"
-		    android:id="@+id/buttonEditVJoy"
+		    android:id="@+id/buttonLaunchEditor"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
-		    android:text="Edit VJoy" />
+		    android:text="@string/launch_editor" />
             </LinearLayout>
         </TableRow>
 
