--- a/shell/android/res/layout/bios_list_item.xml
+++ b/shell/android/res/layout/bios_list_item.xml
@@ -7,12 +7,9 @@
 
     <LinearLayout
         android:id="@+id/childview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:orientation="horizontal"
-        android:layout_marginRight="2dp">
+        android:orientation="horizontal" >
 
         <ImageView
             android:id="@+id/item_icon"
@@ -21,7 +18,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="2dp"
             android:layout_marginLeft="6dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginRight="6dp"
             android:layout_marginTop="2dp"
             android:scaleType="fitCenter"
             android:src="@drawable/gdi" />
