--- a/shell/android/res/layout/configure_fragment.xml
+++ b/shell/android/res/layout/configure_fragment.xml
@@ -3,13 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
+
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:stretchColumns="*" >
-        
-        <!--TableRow android:gravity="center_vertical" >
+
+        <!--
+        TableRow android:gravity="center_vertical" >
             
             <TextView
             android:id="@+id/dynarec_text"
@@ -32,34 +33,36 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             </LinearLayout>
-        </TableRow-->
-        
+        </TableRow
+        -->
+
         <TableRow android:gravity="center_vertical" >
-            
+
             <TextView
-            android:id="@+id/unstable_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:ems="10"
-            android:gravity="center_vertical|left"
-            android:text="@string/select_unstable" />
-            
+                android:id="@+id/unstable_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:ems="10"
+                android:gravity="center_vertical|left"
+                android:text="@string/select_unstable" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
                 android:orientation="vertical" >
-                
+
                 <de.ankri.views.Switch
-                android:id="@+id/unstable_option"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                    android:id="@+id/unstable_option"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
         </TableRow>
-        
-        <!--LinearLayout
+
+        <!--
+        LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
@@ -84,119 +87,121 @@
                     android:ems="10" >
                 </Spinner>
             </LinearLayout>
-        </LinearLayout-->
-        
+        </LinearLayout
+        -->
+
         <TableRow android:gravity="center_vertical" >
-            
+
             <TextView
-            android:id="@+id/limitfps_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:ems="10"
-            android:gravity="center_vertical|left"
-            android:text="@string/select_limitfps" />
-            
+                android:id="@+id/limitfps_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:ems="10"
+                android:gravity="center_vertical|left"
+                android:text="@string/select_limitfps" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
                 android:orientation="vertical" >
-                
+
                 <de.ankri.views.Switch
-                android:id="@+id/limitfps_option"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                    android:id="@+id/limitfps_option"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
         </TableRow>
-        
+
         <TableRow android:gravity="center_vertical" >
-            
+
             <TextView
-            android:id="@+id/mipmaps_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:ems="10"
-            android:gravity="center_vertical|left"
-            android:text="@string/select_mipmaps" />
-            
+                android:id="@+id/mipmaps_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:ems="10"
+                android:gravity="center_vertical|left"
+                android:text="@string/select_mipmaps" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
                 android:orientation="vertical" >
-                
+
                 <de.ankri.views.Switch
-                android:id="@+id/mipmaps_option"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                    android:id="@+id/mipmaps_option"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
         </TableRow>
-        
+
         <TableRow android:gravity="center_vertical" >
-            
+
             <TextView
-            android:id="@+id/stretch_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.5"
-            android:ems="10"
-            android:gravity="center_vertical|left"
-            android:text="@string/select_stretch" />
-            
+                android:id="@+id/stretch_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:ems="10"
+                android:gravity="center_vertical|left"
+                android:text="@string/select_stretch" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="right"
                 android:orientation="vertical" >
-                
+
                 <de.ankri.views.Switch
-                android:id="@+id/stretch_option"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                    android:id="@+id/stretch_option"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </LinearLayout>
         </TableRow>
-        
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
-            
+
             <TextView
-            android:id="@+id/frameskip_text"
-            android:layout_width="wrap_content"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-            android:text="@string/set_frameskip" />
-            
+                android:id="@+id/frameskip_text"
+                android:layout_width="wrap_content"
+                android:layout_height="0dip"
+                android:layout_weight="1"
+                android:text="@string/set_frameskip" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
-                
+
                 <TextView
-                android:id="@+id/current_frames"
-                android:layout_width="0dip"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10" />
-                
+                    android:id="@+id/current_frames"
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10" />
+
                 <SeekBar
-                android:id="@+id/frame_seekbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ems="10"
-                android:max="5"
-                android:progress="0" />
+                    android:id="@+id/frame_seekbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:max="5"
+                    android:progress="0" />
             </LinearLayout>
         </LinearLayout>
-        
-        <!--TableRow android:gravity="center_vertical" >
+
+        <!--
+        TableRow android:gravity="center_vertical" >
             
             <TextView
             android:id="@+id/render_text"
@@ -219,16 +224,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             </LinearLayout>
-        </TableRow-->
-        
+
+        </TableRow
+        -->
+
+        <TableRow android:gravity="center_vertical" >
+
+            <Button
+                android:id="@+id/debug_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="8"
+                android:text="@string/menu_debug" />
+        </TableRow>
     </TableLayout>
-    
-    <Button
-        android:id="@+id/debug_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:ems="8"
-        android:text="@string/menu_debug" />
-    
+
 </LinearLayout>
