--- a/shell/android/res/layout/input_mod_fragment.xml
+++ b/shell/android/res/layout/input_mod_fragment.xml
@@ -13,6 +13,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:stretchColumns="*" >
+        
+        <TableRow
+            android:layout_marginTop="25dp"
+            android:gravity="center_vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.5"
+                android:ems="10"
+                android:gravity="center_vertical|left"
+                android:text="@string/modified_layout" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:orientation="vertical" >
+
+                <de.ankri.views.Switch
+                    android:id="@+id/switchModifiedLayoutEnabled"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+        </TableRow>
 
         <TableRow android:gravity="center_vertical" >
 
