--- a/shell/android/res/layout/input_mod_fragment.xml
+++ b/shell/android/res/layout/input_mod_fragment.xml
@@ -18,6 +18,21 @@
                 android:layout_marginTop="25dp"
                 android:gravity="center_vertical" >
 
+                <Spinner
+                    android:id="@+id/player_spinner"
+                    android:layout_width="0dip"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10" >
+
+                    <requestFocus />
+                </Spinner>
+            </TableRow>
+
+            <TableRow
+                android:layout_marginTop="25dp"
+                android:gravity="center_vertical" >
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -449,7 +464,7 @@
                         android:layout_weight="1"
                         android:ems="8"
                         android:text="@string/launch_editor" />
-                    
+
                     <Button
                         android:id="@+id/remove_start"
                         android:layout_width="wrap_content"
