--- a/shell/android/res/layout/input_fragment.xml
+++ b/shell/android/res/layout/input_fragment.xml
@@ -65,17 +65,33 @@
                     android:layout_height="wrap_content" />
             </LinearLayout>
         </TableRow>
-        
-        <TableRow android:gravity="center_vertical" >
 
-            <Button
-                android:id="@+id/buttonKeycodeEditor"
-                android:layout_width="match_parent"
+        <TableRow
+            android:layout_marginTop="25dp"
+            android:gravity="center_vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
                 android:layout_weight="1"
-                android:ems="8"
-                android:text="@string/menu_edit_keycodes" />
+                android:ems="10"
+                android:text="@string/customize_physical_controls" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="right"
+                android:orientation="vertical" >
+
+                <Button
+                    android:id="@+id/buttonKeycodeEditor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="8"
+                    android:text="@string/launch_editor" />
+            </LinearLayout>
         </TableRow>
     </TableLayout>
 
