--- a/shell/android/res/layout/input_mod_fragment.xml
+++ b/shell/android/res/layout/input_mod_fragment.xml
@@ -119,8 +119,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:ems="8"
-                        android:text="@string/launch_editor" />
+                        android:ems="6"
+                        android:text="@string/select" />
 
                     <Button
                         android:id="@+id/remove_a_button"
@@ -170,8 +170,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:ems="8"
-                        android:text="@string/launch_editor" />
+                        android:ems="6"
+                        android:text="@string/select" />
 
                     <Button
                         android:id="@+id/remove_b_button"
@@ -221,8 +221,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:ems="8"
-                        android:text="@string/launch_editor" />
+                        android:ems="6"
+                        android:text="@string/select" />
 
                     <Button
                         android:id="@+id/remove_x_button"
@@ -272,8 +272,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:ems="8"
-                        android:text="@string/launch_editor" />
+                        android:ems="6"
+                        android:text="@string/select" />
 
                     <Button
                         android:id="@+id/remove_y_button"
@@ -323,8 +323,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:ems="8"
-                        android:text="@string/launch_editor" />
+                        android:ems="6"
+                        android:text="@string/select" />
 
                     <Button
                         android:id="@+id/remove_l_button"
@@ -374,8 +374,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:ems="8"
-                        android:text="@string/launch_editor" />
+                        android:ems="6"
+                        android:text="@string/select" />
 
                     <Button
                         android:id="@+id/remove_r_button"
@@ -412,8 +412,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:ems="8"
-                        android:text="@string/launch_editor" />
+                        android:ems="6"
+                        android:text="@string/select" />
 
                     <Button
                         android:id="@+id/remove_joystick"
@@ -450,8 +450,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:ems="8"
-                        android:text="@string/launch_editor" />
+                        android:ems="6"
+                        android:text="@string/select" />
 
                     <Button
                         android:id="@+id/remove_dpad_up"
@@ -488,8 +488,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:ems="8"
-                        android:text="@string/launch_editor" />
+                        android:ems="6"
+                        android:text="@string/select" />
 
                     <Button
                         android:id="@+id/remove_dpad_down"
@@ -526,8 +526,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:ems="8"
-                        android:text="@string/launch_editor" />
+                        android:ems="6"
+                        android:text="@string/select" />
 
                     <Button
                         android:id="@+id/remove_dpad_left"
@@ -564,8 +564,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:ems="8"
-                        android:text="@string/launch_editor" />
+                        android:ems="6"
+                        android:text="@string/select" />
 
                     <Button
                         android:id="@+id/remove_dpad_right"
@@ -615,8 +615,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:ems="8"
-                        android:text="@string/launch_editor" />
+                        android:ems="6"
+                        android:text="@string/select" />
 
                     <Button
                         android:id="@+id/remove_start"
